src/test/deca/context/invalid/sansObjet/simpleExp.deca
{
  int x;
  x = 0.1;
}
